Setting up intro page

--- a/index.html
+++ b/index.html
@@ -15,6 +15,21 @@
         <span id="seconds">0</span>
     </div>
 
+    <div class="container">
+
+        <div id="main">
+            <h1 id="start">Coding Quiz Challenge</h1>
+            <h2>Try to answer the following coding-related questions within the allotted time limit.</h2>
+            <h3>Incorrect answers will subtract 10 seconds from the clock!</h3>
+            <button id="btn">Start Quiz</button>
+        </div>
+
+        <!-- question list -->
+        <div id="questions">
+
+        </div>
+
+    </div>
 
 
     <script src="./script.js"></script>
