Setting up the questions container in HTML file

--- a/index.html
+++ b/index.html
@@ -26,7 +26,14 @@
 
         <!-- question list -->
         <div id="questions">
-
+            <h2 id="question-title"></h2>
+            <div class="answers-container" id="answer-options">
+                <div id="answer-1"></div>
+                <div id="answer-2"></div>
+                <div id="answer-3"></div>
+                <div id="answer-4"></div>
+            </div>
+            <div id="answer"></div>            
         </div>
 
     </div>
