Adding high scores to HTML file

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    
+
     <div class="timer">Time:
         <span id="seconds">0</span>
     </div>
@@ -34,7 +34,7 @@
                 <div id="answer-3"></div>
                 <div id="answer-4"></div>
             </div>
-            <div id="answer"></div>            
+            <div id="answer"></div>
         </div>
 
         <!-- end page -->
@@ -49,8 +49,15 @@
             <div id="user-initials"><span id="username"></span></div>
         </div>
 
-    </div>
+        <!-- high scores -->
+        <div>
+            <h1 id="high-scores">High Scores</h1>
+            <p id="result"></p>
+            <p id="final-user-score"></p>
+            <button id="play-again"><a href="./index.html">Play Again?</a></button>
+        </div>
 
+    </div>
 
     <script src="./script.js"></script>
 </body>
