--- a/index.html
+++ b/index.html
@@ -22,17 +22,17 @@
             <h1 id="start">Coding Quiz Challenge</h1>
             <h2>Try to answer the following coding-related questions within the allotted time limit.</h2>
             <h3>Incorrect answers will subtract 10 seconds from the clock!</h3>
-            <button id="btn-start">Start Quiz</button>
+            <button id="btnStart">Start Quiz</button>
         </div>
 
         <!-- question list -->
         <div id="questions">
-            <h2 id="question-title"></h2>
-            <div class="answers-container" id="answer-options">
-                <div id="answer-1"></div>
-                <div id="answer-2"></div>
-                <div id="answer-3"></div>
-                <div id="answer-4"></div>
+            <h2 id="questionTitle"></h2>
+            <div class="answersContainer" id="answerOptions">
+                <div id="answer1"></div>
+                <div id="answer2"></div>
+                <div id="answer3"></div>
+                <div id="answer4"></div>
             </div>
             <div id="answer"></div>
         </div>
@@ -43,18 +43,18 @@
             <h2>Enter initials:
                 <input type="text" id="initials">
             </h2>
-            <button id="btn-submit">Submit</button>
+            <button id="btnSubmit">Submit</button>
 
             <div id="result"></div>
-            <div id="user-initials"><span id="username"></span></div>
+            <div id="userInitials"><span id="userName"></span></div>
         </div>
 
         <!-- high scores -->
         <div>
-            <h1 id="high-scores">High Scores</h1>
+            <h1 id="highScores">High Scores</h1>
             <p id="result"></p>
-            <p id="final-user-score"></p>
-            <button id="play-again"><a href="./index.html">Play Again?</a></button>
+            <p id="finalUserScore"></p>
+            <button id="playAgain"><a href="./index.html">Play Again?</a></button>
         </div>
 
     </div>
